# jupyter-server-connections

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
connections/: app.py  handlers.py
jupyter-config/: jupyter_server_connections.json
jupyter_server_connections/: __init__.py  __main__.py  app.py  handlers.py
tests/: conftest.py  test_app.py
