[project]
name = "jupyter_server_connections"
version = "0.1.0"
description = "A Jupyter Server extension providing an endpoint for kernel connection files."
authors = [
    {name = "Christopher Field", email = "chris.field@theiascientific.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project.scripts]
jupyter-server-connections = "jupyer_server_connections.app:main"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "hatch",
    "ipython",
    "ipykernel",
    "isort",
    "jupyter_client",
    "jupyter_server>=2.0.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]",
    "pytest_mock",
    "tornado",
    "twine"
]

[project.urls]
Homepage = "https://github.com/Theia-Scientific/jupyter-server-connections"
Source = "https://github.com/Theia-Scientific/jupyter-server-connections"
Tracker = "https://github.com/Theia-Scientific/jupyter-server-connections/issues"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"

[tool.coverage.report]
omit = [ "__main__.py" ]
